fix: windows scrollbar

--- a/FlowOS/public/styles/index.css
+++ b/FlowOS/public/styles/index.css
@@ -135,3 +135,14 @@ body {
 	display: inline-block;
 	border-radius: 5px;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+	display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+* {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+  }
