--- a/FlowOS/public/styles/window.css
+++ b/FlowOS/public/styles/window.css
@@ -86,3 +86,14 @@ td {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+	display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+* {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+  }
